# RustyStore

./: compose.yaml  init.sql
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/jwt-kenji/: Cargo.toml
backend/jwt-kenji/base64-kenji/: Cargo.toml
backend/jwt-kenji/base64-kenji/src/: lib.rs  tests.rs
backend/jwt-kenji/src/: lib.rs  tests.rs
backend/src/: entities.rs  main.rs  postgres.rs  routes.rs
docker/: Dockerfile.backend  Dockerfile.frontend  compose.yaml
frontend/: .dockerignore  Cargo.toml  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Product.tsx  Products.tsx  index.js  main.rs  main.tsx
frontend/src/auth/: AuthLayout.tsx  SignIn.tsx  SignUp.tsx
