[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
deadpool-postgres = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7.10"
env_logger = "0.11.3"
bcrypt = "0.15.1"
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }
derive_more = "0.99.17"
jwt-kenji = "0.1.0"
